--- a/project1.lpi
+++ b/project1.lpi
@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <PathDelim Value="/"/>
     <Version Value="7"/>
     <General>
       <Flags>
@@ -9,7 +8,7 @@
       </Flags>
       <MainUnit Value="0"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="0"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -33,26 +32,27 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="16">
+    <Units Count="17">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="project1"/>
-        <CursorPos X="68" Y="11"/>
+        <CursorPos X="1" Y="15"/>
         <TopLine Value="1"/>
         <UsageCount Value="200"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
-        <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="10" Y="299"/>
-        <TopLine Value="281"/>
-        <EditorIndex Value="1"/>
+        <CursorPos X="10" Y="228"/>
+        <TopLine Value="201"/>
+        <EditorIndex Value="0"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
+        <FoldState Value=" T4iB03112b"/>
       </Unit1>
       <Unit2>
         <Filename Value="domain_unit.pas"/>
@@ -67,227 +67,230 @@
         <UnitName Value="point3d_unit"/>
         <CursorPos X="1" Y="10"/>
         <TopLine Value="1"/>
-        <UsageCount Value="110"/>
+        <UsageCount Value="85"/>
       </Unit3>
       <Unit4>
-        <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkwinapi.inc"/>
-        <CursorPos X="25" Y="4963"/>
-        <TopLine Value="4955"/>
-        <UsageCount Value="2"/>
-      </Unit4>
-      <Unit5>
         <Filename Value="region_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="region_unit"/>
-        <CursorPos X="1" Y="11"/>
-        <TopLine Value="10"/>
-        <EditorIndex Value="0"/>
+        <CursorPos X="1" Y="33"/>
+        <TopLine Value="12"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
-      </Unit5>
-      <Unit6>
+      </Unit4>
+      <Unit5>
         <Filename Value="rigidgroup_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="rigidgroup_unit"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <UsageCount Value="201"/>
-      </Unit6>
-      <Unit7>
+      </Unit5>
+      <Unit6>
         <Filename Value="atom_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="atom_unit"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
         <UsageCount Value="200"/>
-      </Unit7>
-      <Unit8>
+      </Unit6>
+      <Unit7>
         <Filename Value="sinewave_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sineWave_unit"/>
-        <CursorPos X="18" Y="37"/>
-        <TopLine Value="24"/>
-        <EditorIndex Value="4"/>
+        <CursorPos X="1" Y="45"/>
+        <TopLine Value="35"/>
         <UsageCount Value="200"/>
-        <Loaded Value="True"/>
-      </Unit8>
-      <Unit9>
+      </Unit7>
+      <Unit8>
         <Filename Value="linkedlist_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="linkedList_unit"/>
-        <CursorPos X="23" Y="121"/>
-        <TopLine Value="100"/>
-        <EditorIndex Value="2"/>
-        <UsageCount Value="161"/>
-        <Loaded Value="True"/>
-      </Unit9>
-      <Unit10>
+        <CursorPos X="1" Y="138"/>
+        <TopLine Value="123"/>
+        <UsageCount Value="368"/>
+      </Unit8>
+      <Unit9>
         <Filename Value="myinteger_unit.pas"/>
         <UnitName Value="myinteger_unit"/>
         <CursorPos X="47" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="97"/>
-      </Unit10>
-      <Unit11>
+        <UsageCount Value="72"/>
+      </Unit9>
+      <Unit10>
         <Filename Value="sinesegment_unit.pas"/>
         <UnitName Value="sineSegment_unit"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <UsageCount Value="31"/>
-      </Unit11>
-      <Unit12>
+        <UsageCount Value="6"/>
+      </Unit10>
+      <Unit11>
         <Filename Value="pointnd_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="pointnd_unit"/>
-        <CursorPos X="19" Y="193"/>
+        <CursorPos X="64" Y="19"/>
         <TopLine Value="2"/>
-        <EditorIndex Value="5"/>
-        <UsageCount Value="120"/>
-        <Loaded Value="True"/>
-      </Unit12>
-      <Unit13>
-        <Filename Value="../../../usr/lib/lazarus/lcl/include/messagedialogs.inc"/>
-        <CursorPos X="1" Y="230"/>
-        <TopLine Value="217"/>
-        <UsageCount Value="11"/>
-      </Unit13>
-      <Unit14>
-        <Filename Value="../../../usr/lib/lazarus/lcl/interfaces/gtk/gtkproc.inc"/>
-        <CursorPos X="1" Y="1655"/>
-        <TopLine Value="1642"/>
-        <UsageCount Value="11"/>
-      </Unit14>
-      <Unit15>
+        <UsageCount Value="327"/>
+      </Unit11>
+      <Unit12>
         <Filename Value="sinewaveinregion_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sinewaveinregion_unit"/>
-        <CursorPos X="20" Y="12"/>
+        <CursorPos X="18" Y="15"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="3"/>
-        <UsageCount Value="28"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="235"/>
         <Loaded Value="True"/>
+      </Unit12>
+      <Unit13>
+        <Filename Value="../../../usr/lib/lazarus/0.9.28.2/lcl/include/control.inc"/>
+        <CursorPos X="1" Y="1580"/>
+        <TopLine Value="1579"/>
+        <UsageCount Value="12"/>
+      </Unit13>
+      <Unit14>
+        <Filename Value="../../../usr/lib/lazarus/0.9.28.2/lcl/include/buttoncontrol.inc"/>
+        <CursorPos X="1" Y="27"/>
+        <TopLine Value="12"/>
+        <UsageCount Value="12"/>
+      </Unit14>
+      <Unit15>
+        <Filename Value="../../../usr/lib/lazarus/0.9.28.2/lcl/include/buttons.inc"/>
+        <CursorPos X="1" Y="332"/>
+        <TopLine Value="307"/>
+        <UsageCount Value="12"/>
       </Unit15>
+      <Unit16>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="atomsine_calc_unit"/>
+        <CursorPos X="11" Y="24"/>
+        <TopLine Value="9"/>
+        <EditorIndex Value="1"/>
+        <UsageCount Value="44"/>
+        <Loaded Value="True"/>
+        <FoldState Value=" T4N0B4z"/>
+      </Unit16>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="unit1.pas"/>
-        <Caret Line="226" Column="45" TopLine="203"/>
+        <Caret Line="131" Column="55" TopLine="116"/>
       </Position1>
       <Position2>
         <Filename Value="unit1.pas"/>
-        <Caret Line="235" Column="54" TopLine="213"/>
+        <Caret Line="138" Column="38" TopLine="116"/>
       </Position2>
       <Position3>
         <Filename Value="unit1.pas"/>
-        <Caret Line="247" Column="32" TopLine="218"/>
+        <Caret Line="146" Column="27" TopLine="121"/>
       </Position3>
       <Position4>
         <Filename Value="unit1.pas"/>
-        <Caret Line="260" Column="13" TopLine="237"/>
+        <Caret Line="149" Column="30" TopLine="121"/>
       </Position4>
       <Position5>
         <Filename Value="unit1.pas"/>
-        <Caret Line="221" Column="1" TopLine="180"/>
+        <Caret Line="284" Column="69" TopLine="269"/>
       </Position5>
       <Position6>
         <Filename Value="unit1.pas"/>
-        <Caret Line="235" Column="51" TopLine="221"/>
+        <Caret Line="296" Column="30" TopLine="312"/>
       </Position6>
       <Position7>
         <Filename Value="unit1.pas"/>
-        <Caret Line="254" Column="5" TopLine="237"/>
+        <Caret Line="133" Column="8" TopLine="119"/>
       </Position7>
       <Position8>
         <Filename Value="unit1.pas"/>
-        <Caret Line="237" Column="40" TopLine="224"/>
+        <Caret Line="135" Column="17" TopLine="117"/>
       </Position8>
       <Position9>
         <Filename Value="unit1.pas"/>
-        <Caret Line="240" Column="13" TopLine="227"/>
+        <Caret Line="327" Column="49" TopLine="299"/>
       </Position9>
       <Position10>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="241" Column="53" TopLine="228"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="1" Column="6" TopLine="1"/>
       </Position10>
       <Position11>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="243" Column="69" TopLine="230"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="10" Column="5" TopLine="1"/>
       </Position11>
       <Position12>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="250" Column="92" TopLine="237"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="8" Column="83" TopLine="3"/>
       </Position12>
       <Position13>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="278" Column="67" TopLine="255"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="9" Column="14" TopLine="1"/>
       </Position13>
       <Position14>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="48" Column="37" TopLine="33"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="12" Column="3" TopLine="1"/>
       </Position14>
       <Position15>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="263" Column="27" TopLine="250"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="14" Column="3" TopLine="2"/>
       </Position15>
       <Position16>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="173" Column="76" TopLine="144"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="9" Column="24" TopLine="1"/>
       </Position16>
       <Position17>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="169" Column="30" TopLine="144"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="18" Column="1" TopLine="1"/>
       </Position17>
       <Position18>
-        <Filename Value="sinewaveinregion_unit.pas"/>
-        <Caret Line="11" Column="27" TopLine="1"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="47" Column="3" TopLine="21"/>
       </Position18>
       <Position19>
         <Filename Value="unit1.pas"/>
-        <Caret Line="228" Column="1" TopLine="222"/>
+        <Caret Line="179" Column="42" TopLine="164"/>
       </Position19>
       <Position20>
         <Filename Value="unit1.pas"/>
-        <Caret Line="169" Column="22" TopLine="144"/>
+        <Caret Line="175" Column="45" TopLine="164"/>
       </Position20>
       <Position21>
         <Filename Value="unit1.pas"/>
-        <Caret Line="173" Column="5" TopLine="144"/>
+        <Caret Line="180" Column="28" TopLine="149"/>
       </Position21>
       <Position22>
         <Filename Value="unit1.pas"/>
-        <Caret Line="240" Column="57" TopLine="227"/>
+        <Caret Line="6" Column="2" TopLine="145"/>
       </Position22>
       <Position23>
         <Filename Value="unit1.pas"/>
-        <Caret Line="250" Column="52" TopLine="235"/>
+        <Caret Line="179" Column="27" TopLine="164"/>
       </Position23>
       <Position24>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="292" Column="55" TopLine="273"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="18" Column="7" TopLine="2"/>
       </Position24>
       <Position25>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="266" Column="19" TopLine="246"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="23" Column="30" TopLine="1"/>
       </Position25>
       <Position26>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="290" Column="25" TopLine="277"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="16" Column="1" TopLine="1"/>
       </Position26>
       <Position27>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="223" Column="2" TopLine="217"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="8" Column="1" TopLine="1"/>
       </Position27>
       <Position28>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="289" Column="25" TopLine="276"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="18" Column="42" TopLine="1"/>
       </Position28>
       <Position29>
         <Filename Value="unit1.pas"/>
-        <Caret Line="239" Column="48" TopLine="226"/>
+        <Caret Line="179" Column="42" TopLine="17"/>
       </Position29>
       <Position30>
         <Filename Value="unit1.pas"/>
-        <Caret Line="289" Column="19" TopLine="276"/>
+        <Caret Line="180" Column="9" TopLine="165"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -305,16 +308,6 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="2">
-      <Item1>
-        <Source Value="unit1.pas"/>
-        <Line Value="221"/>
-      </Item1>
-      <Item2>
-        <Source Value="unit1.pas"/>
-        <Line Value="52"/>
-      </Item2>
-    </BreakPoints>
     <Exceptions Count="2">
       <Item1>
         <Name Value="ECodetoolError"/>
