--- a/project1.lpi
+++ b/project1.lpi
@@ -8,7 +8,7 @@
       </Flags>
       <MainUnit Value="0"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="1"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -47,8 +47,8 @@
         <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="10" Y="228"/>
-        <TopLine Value="201"/>
+        <CursorPos X="7" Y="211"/>
+        <TopLine Value="193"/>
         <EditorIndex Value="0"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -58,9 +58,11 @@
         <Filename Value="domain_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="domain_unit"/>
-        <CursorPos X="17" Y="16"/>
-        <TopLine Value="3"/>
+        <CursorPos X="41" Y="21"/>
+        <TopLine Value="4"/>
+        <EditorIndex Value="3"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
       </Unit2>
       <Unit3>
         <Filename Value="point3d_unit.pas"/>
@@ -73,33 +75,41 @@
         <Filename Value="region_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="region_unit"/>
-        <CursorPos X="1" Y="33"/>
-        <TopLine Value="12"/>
+        <CursorPos X="15" Y="59"/>
+        <TopLine Value="36"/>
+        <EditorIndex Value="2"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
       </Unit4>
       <Unit5>
         <Filename Value="rigidgroup_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="rigidgroup_unit"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
+        <CursorPos X="35" Y="84"/>
+        <TopLine Value="69"/>
+        <EditorIndex Value="5"/>
         <UsageCount Value="201"/>
+        <Loaded Value="True"/>
       </Unit5>
       <Unit6>
         <Filename Value="atom_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="atom_unit"/>
-        <CursorPos X="1" Y="1"/>
-        <TopLine Value="1"/>
+        <CursorPos X="19" Y="27"/>
+        <TopLine Value="2"/>
+        <EditorIndex Value="4"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
       </Unit6>
       <Unit7>
         <Filename Value="sinewave_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sineWave_unit"/>
-        <CursorPos X="1" Y="45"/>
-        <TopLine Value="35"/>
+        <CursorPos X="33" Y="71"/>
+        <TopLine Value="56"/>
+        <EditorIndex Value="8"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
       </Unit7>
       <Unit8>
         <Filename Value="linkedlist_unit.pas"/>
@@ -127,17 +137,19 @@
         <Filename Value="pointnd_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="pointnd_unit"/>
-        <CursorPos X="64" Y="19"/>
-        <TopLine Value="2"/>
+        <CursorPos X="36" Y="42"/>
+        <TopLine Value="33"/>
+        <EditorIndex Value="6"/>
         <UsageCount Value="327"/>
+        <Loaded Value="True"/>
       </Unit11>
       <Unit12>
         <Filename Value="sinewaveinregion_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="sinewaveinregion_unit"/>
-        <CursorPos X="18" Y="15"/>
-        <TopLine Value="1"/>
-        <EditorIndex Value="2"/>
+        <CursorPos X="22" Y="44"/>
+        <TopLine Value="33"/>
+        <EditorIndex Value="7"/>
         <UsageCount Value="235"/>
         <Loaded Value="True"/>
       </Unit12>
@@ -145,153 +157,149 @@
         <Filename Value="../../../usr/lib/lazarus/0.9.28.2/lcl/include/control.inc"/>
         <CursorPos X="1" Y="1580"/>
         <TopLine Value="1579"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="11"/>
       </Unit13>
       <Unit14>
         <Filename Value="../../../usr/lib/lazarus/0.9.28.2/lcl/include/buttoncontrol.inc"/>
         <CursorPos X="1" Y="27"/>
         <TopLine Value="12"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="11"/>
       </Unit14>
       <Unit15>
         <Filename Value="../../../usr/lib/lazarus/0.9.28.2/lcl/include/buttons.inc"/>
         <CursorPos X="1" Y="332"/>
         <TopLine Value="307"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="11"/>
       </Unit15>
       <Unit16>
         <Filename Value="atomsine_calc_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="atomsine_calc_unit"/>
-        <CursorPos X="11" Y="24"/>
-        <TopLine Value="9"/>
+        <CursorPos X="16" Y="51"/>
+        <TopLine Value="36"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="44"/>
+        <UsageCount Value="51"/>
         <Loaded Value="True"/>
-        <FoldState Value=" T4N0B4z"/>
+        <FoldState Value=" T4iV061X"/>
       </Unit16>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="131" Column="55" TopLine="116"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="53" Column="1" TopLine="28"/>
       </Position1>
       <Position2>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="138" Column="38" TopLine="116"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="57" Column="1" TopLine="42"/>
       </Position2>
       <Position3>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="146" Column="27" TopLine="121"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="58" Column="1" TopLine="43"/>
       </Position3>
       <Position4>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="149" Column="30" TopLine="121"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="59" Column="1" TopLine="44"/>
       </Position4>
       <Position5>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="284" Column="69" TopLine="269"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="61" Column="1" TopLine="46"/>
       </Position5>
       <Position6>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="296" Column="30" TopLine="312"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="63" Column="1" TopLine="48"/>
       </Position6>
       <Position7>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="133" Column="8" TopLine="119"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="65" Column="1" TopLine="50"/>
       </Position7>
       <Position8>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="135" Column="17" TopLine="117"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="48" Column="1" TopLine="28"/>
       </Position8>
       <Position9>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="327" Column="49" TopLine="299"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="49" Column="1" TopLine="28"/>
       </Position9>
       <Position10>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="1" Column="6" TopLine="1"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="50" Column="1" TopLine="28"/>
       </Position10>
       <Position11>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="10" Column="5" TopLine="1"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="51" Column="1" TopLine="28"/>
       </Position11>
       <Position12>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="8" Column="83" TopLine="3"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="52" Column="1" TopLine="28"/>
       </Position12>
       <Position13>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="9" Column="14" TopLine="1"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="48" Column="1" TopLine="28"/>
       </Position13>
       <Position14>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="12" Column="3" TopLine="1"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="49" Column="1" TopLine="28"/>
       </Position14>
       <Position15>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="14" Column="3" TopLine="2"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="50" Column="1" TopLine="28"/>
       </Position15>
       <Position16>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="9" Column="24" TopLine="1"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="52" Column="1" TopLine="28"/>
       </Position16>
       <Position17>
-        <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="18" Column="1" TopLine="1"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="48" Column="1" TopLine="28"/>
       </Position17>
       <Position18>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="47" Column="3" TopLine="21"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="49" Column="1" TopLine="28"/>
       </Position18>
       <Position19>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="179" Column="42" TopLine="164"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="50" Column="1" TopLine="28"/>
       </Position19>
       <Position20>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="175" Column="45" TopLine="164"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="52" Column="1" TopLine="28"/>
       </Position20>
       <Position21>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="180" Column="28" TopLine="149"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="48" Column="1" TopLine="28"/>
       </Position21>
       <Position22>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="6" Column="2" TopLine="145"/>
+        <Filename Value="sinewaveinregion_unit.pas"/>
+        <Caret Line="50" Column="83" TopLine="28"/>
       </Position22>
       <Position23>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="179" Column="27" TopLine="164"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="24" Column="56" TopLine="11"/>
       </Position23>
       <Position24>
         <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="18" Column="7" TopLine="2"/>
+        <Caret Line="38" Column="51" TopLine="20"/>
       </Position24>
       <Position25>
         <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="23" Column="30" TopLine="1"/>
+        <Caret Line="37" Column="11" TopLine="22"/>
       </Position25>
       <Position26>
         <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="16" Column="1" TopLine="1"/>
+        <Caret Line="10" Column="13" TopLine="7"/>
       </Position26>
       <Position27>
         <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="8" Column="1" TopLine="1"/>
+        <Caret Line="37" Column="80" TopLine="22"/>
       </Position27>
       <Position28>
         <Filename Value="atomsine_calc_unit.pas"/>
-        <Caret Line="18" Column="42" TopLine="1"/>
+        <Caret Line="17" Column="93" TopLine="1"/>
       </Position28>
       <Position29>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="179" Column="42" TopLine="17"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="37" Column="14" TopLine="22"/>
       </Position29>
-      <Position30>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="180" Column="9" TopLine="165"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
