--- a/project1.lpi
+++ b/project1.lpi
@@ -8,7 +8,7 @@
       </Flags>
       <MainUnit Value="0"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="2"/>
+      <ActiveEditorIndexAtStart Value="1"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -47,12 +47,12 @@
         <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="61" Y="181"/>
-        <TopLine Value="151"/>
+        <CursorPos X="14" Y="159"/>
+        <TopLine Value="144"/>
         <EditorIndex Value="0"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
-        <FoldState Value=" T4iB0311211i"/>
+        <FoldState Value=" T4iB03112316"/>
       </Unit1>
       <Unit2>
         <Filename Value="domain_unit.pas"/>
@@ -175,10 +175,10 @@
         <Filename Value="atomsine_calc_unit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="atomsine_calc_unit"/>
-        <CursorPos X="25" Y="15"/>
-        <TopLine Value="5"/>
+        <CursorPos X="59" Y="121"/>
+        <TopLine Value="106"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="59"/>
+        <UsageCount Value="60"/>
         <Loaded Value="True"/>
       </Unit16>
       <Unit17>
@@ -186,132 +186,132 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="quicksort_unit"/>
         <CursorPos X="63" Y="61"/>
-        <TopLine Value="39"/>
+        <TopLine Value="38"/>
         <EditorIndex Value="2"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
       </Unit17>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="14" Column="30" TopLine="1"/>
+        <Caret Line="31" Column="16" TopLine="23"/>
       </Position1>
       <Position2>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="22" Column="17" TopLine="7"/>
+        <Caret Line="33" Column="7" TopLine="23"/>
       </Position2>
       <Position3>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="30" Column="37" TopLine="10"/>
+        <Caret Line="38" Column="49" TopLine="23"/>
       </Position3>
       <Position4>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="32" Column="19" TopLine="19"/>
+        <Caret Line="43" Column="27" TopLine="18"/>
       </Position4>
       <Position5>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="19" Column="28" TopLine="4"/>
+        <Caret Line="31" Column="18" TopLine="18"/>
       </Position5>
       <Position6>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="24" Column="6" TopLine="7"/>
+        <Caret Line="46" Column="24" TopLine="24"/>
       </Position6>
       <Position7>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="19" Column="22" TopLine="7"/>
+        <Caret Line="27" Column="127" TopLine="23"/>
       </Position7>
       <Position8>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="12" Column="37" TopLine="4"/>
+        <Caret Line="61" Column="36" TopLine="39"/>
       </Position8>
       <Position9>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="20" Column="37" TopLine="5"/>
+        <Caret Line="49" Column="55" TopLine="33"/>
       </Position9>
       <Position10>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="23" Column="20" TopLine="8"/>
+        <Caret Line="57" Column="32" TopLine="39"/>
       </Position10>
       <Position11>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="11" Column="43" TopLine="8"/>
+        <Caret Line="55" Column="34" TopLine="39"/>
       </Position11>
       <Position12>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="22" Column="22" TopLine="7"/>
+        <Caret Line="63" Column="22" TopLine="39"/>
       </Position12>
       <Position13>
         <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="20" Column="30" TopLine="7"/>
+        <Caret Line="61" Column="29" TopLine="39"/>
       </Position13>
       <Position14>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="23" Column="10" TopLine="8"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="107" Column="19" TopLine="86"/>
       </Position14>
       <Position15>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="24" Column="13" TopLine="9"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="105" Column="19" TopLine="91"/>
       </Position15>
       <Position16>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="25" Column="7" TopLine="10"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="108" Column="28" TopLine="93"/>
       </Position16>
       <Position17>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="28" Column="23" TopLine="13"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="110" Column="41" TopLine="85"/>
       </Position17>
       <Position18>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="31" Column="16" TopLine="23"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="111" Column="62" TopLine="94"/>
       </Position18>
       <Position19>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="33" Column="7" TopLine="23"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="110" Column="45" TopLine="96"/>
       </Position19>
       <Position20>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="38" Column="49" TopLine="23"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="181" Column="61" TopLine="151"/>
       </Position20>
       <Position21>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="43" Column="27" TopLine="18"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="116" Column="13" TopLine="95"/>
       </Position21>
       <Position22>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="31" Column="18" TopLine="18"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="99" Column="56" TopLine="99"/>
       </Position22>
       <Position23>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="46" Column="24" TopLine="24"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="112" Column="9" TopLine="97"/>
       </Position23>
       <Position24>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="27" Column="127" TopLine="23"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="159" Column="14" TopLine="144"/>
       </Position24>
       <Position25>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="61" Column="36" TopLine="39"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="122" Column="13" TopLine="98"/>
       </Position25>
       <Position26>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="49" Column="55" TopLine="33"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="115" Column="92" TopLine="101"/>
       </Position26>
       <Position27>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="57" Column="32" TopLine="39"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="128" Column="17" TopLine="103"/>
       </Position27>
       <Position28>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="55" Column="34" TopLine="39"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="118" Column="42" TopLine="14"/>
       </Position28>
       <Position29>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="63" Column="22" TopLine="39"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="125" Column="134" TopLine="98"/>
       </Position29>
       <Position30>
-        <Filename Value="quicksort_unit.pas"/>
-        <Caret Line="61" Column="29" TopLine="39"/>
+        <Filename Value="atomsine_calc_unit.pas"/>
+        <Caret Line="121" Column="16" TopLine="106"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -332,7 +332,7 @@
     <BreakPoints Count="1">
       <Item1>
         <Source Value="atomsine_calc_unit.pas"/>
-        <Line Value="124"/>
+        <Line Value="159"/>
       </Item1>
     </BreakPoints>
     <Exceptions Count="2">
